--- a/contacts.html
+++ b/contacts.html
@@ -130,7 +130,6 @@
             <div class="contacts__wrapper container">
                 <h2 class="main-caption-m">Контакты и реквизиты</h2>
                 <div class="contacts__container">
-                    <div class="contacts__img" style="background-image: url(./img/contact-img-1.png);"></div>
                     <div class="contacts__info">
                         <ul class="contacts__list">
                             <li class="contacts__item">
@@ -154,23 +153,19 @@
                             </li>
                         </ul>
                     </div>
-                </div>
-            </div>
-        </section>
-        <section class="clients-callback">
-            <div class="clients-callback__wrapper container">
-                <div class="wrapper">
-                    <h4 class="main-caption-s">Мы свяжемся с вами</h4>
-                    <p>Оставьте e-mail и мы свяжемся с вами в ближайшее время!</p>
-                    <form action="#" class="clints-callback__form">
-                        <label class="input_wrapper">
-                            <span class="input-caption">E-mail*</span>
-                            <input type="email" class="main_input js-input" placeholder="ivanov@gmail.com" required>
-                        </label>
-                        <button class="main_button-color js-button-decor">
-                            <span class="text">отправить</span>
-                        </button>
-                    </form>
+                    <div class="clients-callback__wrapper clients-callback__wrapper-contact">
+                        <h4 class="main-caption-s">Мы свяжемся с вами</h4>
+                        <p>Оставьте e-mail и мы свяжемся с вами в ближайшее время!</p>
+                        <form action="#" class="clints-callback__form">
+                            <label class="input_wrapper">
+                                <span class="input-caption">E-mail*</span>
+                                <input type="email" class="main_input js-input" placeholder="ivanov@gmail.com" required>
+                            </label>
+                            <button class="main_button-color js-button-decor">
+                                <span class="text">отправить</span>
+                            </button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </section>
