--- a/partnership.html
+++ b/partnership.html
@@ -133,14 +133,14 @@
                     <li class="partnership__item">
                         <h4 class="caption">Сотрудничество с преподавательским составом</h4>
                         <p class="description">Следуя современным тенденциям развития рынка услуг и труда, наша команда всегда открыта для творческих, энергичных людей, имеющих высокий профессиональный уровень. «УкрКонсалтинг» приглашает к сотрудничеству преподавателей, аудиторов, бизнес-тренеров, связанных со сферами деятельности нашего центра.</p>
-                        <button class="main_button-color js-button-decor">
+                        <button class="main-button-shadow">
                             <span class="text">Я ПРЕПОДАВАТЕЛЬ</span>
                         </button>
                     </li>
                     <li class="partnership__item">
                         <h4 class="caption">Сотрудничество с авторским составом</h4>
                         <p class="description">Следуя современным тенденциям развития рынка услуг и труда, наша команда всегда открыта для творческих, энергичных людей, имеющих высокий профессиональный уровень. «УкрКонсалтинг» приглашает к сотрудничеству преподавателей, аудиторов, бизнес-тренеров, связанных со сферами деятельности нашего центра.</p>
-                        <button class="main_button-color js-button-decor">
+                        <button class="main-button-shadow">
                             <span class="text">Я АВТОР</span>
                         </button>
                     </li>
