--- a/plan-events.html
+++ b/plan-events.html
@@ -383,7 +383,7 @@
                             </div>
                         </div>
                         <div class="calendar__info__footer">
-                            <button class="main_button js-button-decor calendar__info__button">
+                            <button class="main_button calendar__info__button">
                                 <span class="text">Получить программу</span>
                             </button>
                             <button class="main_button-color js-button-decor calendar__info__button">
@@ -399,6 +399,30 @@
                             <span class="icon-download"></span>
                             <span class="text">скачать</span>
                         </a>
+                    </div>
+                    <div class="filter__wrapper js-drop-item">
+                        <button class="filter-mobile-button js-drop-button">
+                            <span class="icon-all filter-icon"></span>
+                            <span class="js-drop-info">Все</span>
+                            <span class="icon-drop"></span>
+                        </button>
+                        <ul class="filter__list filter__list-calendar">
+                            <li class="filter__item js-drop-contains active">
+                                <span class="text">Январь</span>
+                            </li>
+                            <li class="filter__item js-drop-contains">
+                                <span class="text">Февраль</span>
+                            </li>
+                            <li class="filter__item js-drop-contains">
+                                <span class="text">Март</span>
+                            </li>
+                            <li class="filter__item js-drop-contains">
+                                <span class="text">Апрель</span>
+                            </li>
+                            <li class="filter__item js-drop-contains">
+                                <span class="text">Май</span>
+                            </li>
+                        </ul>
                     </div>
                     <div class="full-events__body">
                         <div class="full-events__caption">
@@ -517,91 +541,47 @@
                     <div class="full-events__body full-events__body-mobile">
                         <ul class="full-events__list">
                             <li class="full-events__item">
-                                <div class="full-events__item__header">
-                                    <strong>Январь</strong>
+                                <div class="full-events__item__wrapper">
+                                    <h5 class="type">Дата</h5>
+                                    <p class="description">08.01</p>
                                 </div>
                                 <div class="full-events__item__wrapper">
-                                    <p class="info-wrapper">
-                                        <span class="date">08.01</span>
-                                        <span class="time">17:00</span>
-                                    </p>
-                                    <p class="info-wrapper">
-                                        <span class="city">Харьков</span>
-                                        <strong class="price">3 450 грн</strong>
-                                    </p>
-                                    <p class="theme">
-                                        <strong>Культура безопасности на производстве - фактор снижения рисков несчастных случаев и чрезвычайных ситуаций</strong>
-                                    </p>
+                                    <h5 class="type">Тема мероприятия</h5>
+                                    <p class="description">Культура безопасности на производстве - фактор снижения рисков несчастных случаев и чрезвычайных ситуаций</p>
                                 </div>
                                 <div class="full-events__item__wrapper">
-                                    <p class="info-wrapper">
-                                        <span class="date">08.01</span>
-                                        <span class="time">17:00</span>
-                                    </p>
-                                    <p class="info-wrapper">
-                                        <span class="city">Харьков</span>
-                                        <strong class="price">3 450 грн</strong>
-                                    </p>
-                                    <p class="theme">
-                                        <strong>Культура безопасности на производстве - фактор снижения рисков несчастных случаев и чрезвычайных ситуаций</strong>
-                                    </p>
+                                    <h5 class="type">Город</h5>
+                                    <p class="description">Харьков</p>
                                 </div>
                                 <div class="full-events__item__wrapper">
-                                    <p class="info-wrapper">
-                                        <span class="date">08.01</span>
-                                        <span class="time">17:00</span>
-                                    </p>
-                                    <p class="info-wrapper">
-                                        <span class="city">Харьков</span>
-                                        <strong class="price">3 450 грн</strong>
-                                    </p>
-                                    <p class="theme">
-                                        <strong>Культура безопасности на производстве - фактор снижения рисков несчастных случаев и чрезвычайных ситуаций</strong>
-                                    </p>
+                                    <h5 class="type">Время</h5>
+                                    <p class="description">17:00</p>
+                                </div>
+                                <div class="full-events__item__wrapper">
+                                    <h5 class="type">Цена, грн</h5>
+                                    <p class="description"><strong>3 450</strong></p>
                                 </div>
                             </li>
                             <li class="full-events__item">
-                                <div class="full-events__item__header">
-                                    <strong>Январь</strong>
+                                <div class="full-events__item__wrapper">
+                                    <h5 class="type">Дата</h5>
+                                    <p class="description">08.01</p>
                                 </div>
                                 <div class="full-events__item__wrapper">
-                                    <p class="info-wrapper">
-                                        <span class="date">08.01</span>
-                                        <span class="time">17:00</span>
-                                    </p>
-                                    <p class="info-wrapper">
-                                        <span class="city">Харьков</span>
-                                        <strong class="price">3 450 грн</strong>
-                                    </p>
-                                    <p class="theme">
-                                        <strong>Культура безопасности на производстве - фактор снижения рисков несчастных случаев и чрезвычайных ситуаций</strong>
-                                    </p>
+                                    <h5 class="type">Тема мероприятия</h5>
+                                    <p class="description">Культура безопасности на производстве - фактор снижения рисков несчастных случаев и чрезвычайных ситуаций</p>
                                 </div>
                                 <div class="full-events__item__wrapper">
-                                    <p class="info-wrapper">
-                                        <span class="date">08.01</span>
-                                        <span class="time">17:00</span>
-                                    </p>
-                                    <p class="info-wrapper">
-                                        <span class="city">Харьков</span>
-                                        <strong class="price">3 450 грн</strong>
-                                    </p>
-                                    <p class="theme">
-                                        <strong>Культура безопасности на производстве - фактор снижения рисков несчастных случаев и чрезвычайных ситуаций</strong>
-                                    </p>
+                                    <h5 class="type">Город</h5>
+                                    <p class="description">Харьков</p>
                                 </div>
                                 <div class="full-events__item__wrapper">
-                                    <p class="info-wrapper">
-                                        <span class="date">08.01</span>
-                                        <span class="time">17:00</span>
-                                    </p>
-                                    <p class="info-wrapper">
-                                        <span class="city">Харьков</span>
-                                        <strong class="price">3 450 грн</strong>
-                                    </p>
-                                    <p class="theme">
-                                        <strong>Культура безопасности на производстве - фактор снижения рисков несчастных случаев и чрезвычайных ситуаций</strong>
-                                    </p>
+                                    <h5 class="type">Время</h5>
+                                    <p class="description">17:00</p>
+                                </div>
+                                <div class="full-events__item__wrapper">
+                                    <h5 class="type">Цена, грн</h5>
+                                    <p class="description"><strong>3 450</strong></p>
                                 </div>
                             </li>
                         </ul>
