--- a/about-us.html
+++ b/about-us.html
@@ -126,12 +126,74 @@
                 </ul>
             </div>
         </section>
+        <section class="about-company">
+            <div class="about-company__wrapper container">
+                <h2 class="main-caption-m">О компании</h2>
+                <div class="about-company__container">
+                    <div class="about-company__info">
+                        <div class="about-company__text">
+                            <p>Мы обучаем и консультируем сотрудников Украинских предприятий разного уровня, среднего и крупного бизнеса.</p>
+                            <p>Нашими основными направлениями работы были и остаются:</p>
+                            <ul>
+                                <li>проведение семинаров, тренингов и мастер классов</li>
+                                <li>организация обучающих корпоративных мероприятий консалтинговые услуги</li>
+                                <li>информационно-технические разработки.</li>
+                            </ul>
+                        </div>
+                        <ul class="about-company__list">
+                            <li class="about-company__item">
+                                <div class="about-company__item__img" style="background-image:url(./img/about-company-img-1.png)"></div>
+                                <div class="about-company__item__text">
+                                    <p>22 года УкрКонсалтинг работает в сфере консалтинга и обучения </p>
+                                </div>
+                            </li>
+                            <li class="about-company__item">
+                                <div class="about-company__item__img" style="background-image:url(./img/about-company-img-2.png)"></div>
+                                <div class="about-company__item__text">
+                                    <p>Мы провели около 1000 семинаров различной сложности</p>
+                                </div>
+                            </li>
+                            <li class="about-company__item">
+                                <div class="about-company__item__img" style="background-image:url(./img/about-company-img-3.png)"></div>
+                                <div class="about-company__item__text">
+                                    <p>Среди наших клиенты практически все крупнейшие компании Украины</p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="about-company-img" style="background-image: url(./img/about-company-main-img.png);"></div>
+                </div>
+            </div>
+        </section>
         <section class="about-us">
             <div class="about-us__wrapper container">
-                <div class="about-us__info">
-                    <h2 class="main-caption-m">О компании</h2>
-                    <h4 class="about-us__sub">Консультационный Центр «УкрКонсалтинг» - это организация профессионалов, работающая на рынке информационных услуг с 1995г.</h4>
-                    <p class="about-us__text">Мы обучаем и консультируем сотрудников Украинских предприятий разного уровня, среднего и крупного бизнеса</p>
+                <div class="company-priorities">
+                    <div class="company-priorities__description">
+                        <ul class="company-priorities__list">
+                            <li class="company-priorities__item">
+                                <p>Сегодня центр усиленно развивается в направлении модернизации работы, организации профессионального обучения и подачи материала слушателям на современном уровне.</p>
+                            </li>
+                            <li class="company-priorities__item">
+                                <p>Работа УкрКонсалтинга связана со специфической аудиторией. Наши клиенты крупные предприятия Украины, сотрудники которых имеют высокий уровень профессионализма в силу уже занимаемой должности. </p>
+                            </li>
+                            <li class="company-priorities__item">
+                                <p>Центр был одним из первых, кто предложил услуги образования и консультирования как лидерам своей сферы деятельности, так и начинающим специалистам.</p>
+                            </li>
+                        </ul>
+                        <div class="company-priorities__preview">
+                            <div class="company-priorities__preview__header">
+                                <h4 class="caption">Мы стремимся к тому, чтобы успехи в работе нашей команды приносили процветание нашим клиентам!</h4>
+                            </div>
+                            <div class="company-priorities__preview__info">
+                                <div class="company-priorities__preview__img" style="background-image:url(./img/about-us-img-1.png)"></div>
+                                <div class="company-priorities__preview__descrip">
+                                    <h5 class="name">Коваль Анна Анатольевна</h5>
+                                    <p class="sub">Директор КЦ “УкрКонсалтинг”</p>
+                                    <button class="general-more js-button" data-target="popup-questions">Задать вопрос</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="main-info__wrapper-about-us">
                     <h2 class="main-caption-s">Основные направления работы</h2>
@@ -153,62 +215,6 @@
                         </li>
                     </ul>
                 </div>
-                <div class="company-priorities">
-                    <div class="company-priorities__caption">
-                        <h2 class="main-caption-s">Приоритеты компании</h2>
-                        <p class="company-priorities__text"><strong>Мы заявили, что только упорный труд и инвестиции в повышение уровня работников может приневести бизнес к расцвету, и убеждены в этом сегодня!</strong></p>
-                    </div>
-                    <div class="company-priorities__description">
-                        <ul class="company-priorities__list">
-                            <li class="company-priorities__item">
-                                <p> <strong>Сегодня</strong> центр усиленно развивается в направлении модернизации работы, организации профессионального обучения и подачи материала слушателям на современном уровне.</p>
-                            </li>
-                            <li class="company-priorities__item">
-                                <p>Работа УкрКонсалтинга связана со <strong>специфической аудиторией.</strong> Наши клиенты крупные предприятия Украины, сотрудники которых имеют высокий уровень профессионализма в силу уже занимаемой должности. </p>
-                            </li>
-                            <li class="company-priorities__item">
-                                <p>Центр был <strong>одним из первых,</strong> кто предложил услуги образования и консультирования как лидерам своей сферы деятельности, так и начинающим специалистам.</p>
-                            </li>
-                        </ul>
-                        <div class="company-priorities__preview">
-                            <div class="company-priorities__preview__img" style="background-image:url(./img/about-us-img-1.png)"></div>
-                            <div class="company-priorities__preview__info">
-                                <h4 class="caption">Мы стремимся к тому, чтобы успехи в работе нашей команды приносили процветание нашим клиентам!</h4>
-                                <div class="wrapper">
-                                    <div class="company-priorities__preview__img company-priorities__preview__img-tablet" style="background-image:url(./img/about-us-img-1.png)"></div>
-                                    <div class="company-priorities__preview__descrip">
-                                        <h5 class="name">Коваль Анна Анатольевна</h5>
-                                        <p class="sub">Директор КЦ “УкрКонсалтинг”</p>
-                                        <button class="general-more js-button" data-target="popup-questions">Задать вопрос</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="our-progress">
-            <div class="our-progress__wrapper container">
-                <h2 class="main-caption-s">Наши достижения</h2>
-                    <ul class="our-progress__list">
-                    <li class="our-progress__item">
-                        <p class="type"><strong>Опыт</strong></p>
-                        <p class="description">22 года мы работаем в сфере консалтинга и обучения</p>
-                    </li>
-                    <li class="our-progress__item">
-                        <p class="type"><strong>Рост</strong></p>
-                        <p class="description">От небольших тренингов до корпоративных семинаров с аудиторией в сотни слушателей</p>
-                    </li>
-                    <li class="our-progress__item">
-                        <p class="type"><strong>Масштабы</strong></p>
-                        <p class="description">Проведено около 1000 семинаров различной сложности </p>
-                    </li>
-                    <li class="our-progress__item">
-                        <p class="type"><strong>Доверие</strong></p>
-                        <p class="description">Среди наших клиентов большинство крупнейших компаний Украины</p>
-                    </li>
-                </ul>
             </div>
         </section>
         <section class="our-privilege">
@@ -222,7 +228,7 @@
                                 <p class="description">На данный момент в базе данных 35 отзывов о  работе УкрКонсалтинга</p>
                             </div>
                         </div>
-                        <a href="#" class="main_button-color js-button-decor">
+                        <a href="#" class="main-button-shadow">
                             <span class="text">ЧИТАТЬ ОТЗЫВЫ</span>
                         </a>
                     </li>
@@ -234,7 +240,7 @@
                                 <p class="description">Среди наших клиентов более 700 предприятий со всей Украины</p>
                             </div>
                         </div>
-                        <a href="#" class="main_button-color js-button-decor">
+                        <a href="#" class="main-button-shadow">
                             <span class="text">СМОТРЕТЬ</span>
                         </a>
                     </li>
@@ -246,7 +252,7 @@
                                 <p class="description">Приглашаем к сотрудничеству  профессионалов-практиков с опытом преподавания</p>
                             </div>
                         </div>
-                        <a href="#" class="main_button-color js-button-decor">
+                        <a href="#" class="main-button-shadow">
                             <span class="text">ПОДРОБНЕЕ</span>
                         </a>
                     </li>
